# inselpy

./: .gitignore  00_notes.txt  01_insel_example.py  01_method_missing.py  02_test_insel.py  03_analyze_gengt.py  03_check_block_coverage.rb  04_Azimuth_insel_vs_pvlib.ipynb  05_analyze_gengt_in_meinau.py  05_look_for_name_conflicts.py  06_test_every_example.py  06_test_moonae.py  99_package.sh  99_zip_files.txt  InselLibTest.ipynb  Makefile  PVLib Example.ipynb  PVLib Example.py  README.md  insel.py  insel_example.py  makefile  model.py  pvgis_requests_cache.sqlite  pyproject.toml  setup.cfg  template.py  test_insel.py  test_templates.py  weird_output.vseit
insel/: __init__.py  existing_model.py  insel.py  model.py  one_block_model.py  template.py  temporary_model.py
misc/: 04_property_based_tests.py  99_package.sh  check_block_coverage.rb  look_for_name_conflicts.py
src/insel/: __init__.py  existing_model.py  insel.py  insel_error.py  model.py  plot.py  (+3 more)
src/insel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: a_times_b.insel  a_times_b_utf8.insel  average_irradiance_and_temperature.insel  average_irradiance_on_tilted_surface.insel  broken_fnqs.insel  expg.insel  fill_factor.insel  gengt_comparison.insel  get_irradiance_profile.insel  iterations_until_gengt_convergence.insel  iterations_until_gengt_convergence_in_meinau.insel  mpp.insel  nurnberg_v1.insel  pvlib_weather_generation.insel  read_epw_file.insel  read_relative_file.insel  read_simple_file.insel  remove_odds.insel  solarposition.insel  u_oc.insel  write_params.insel  write_params_0.insel
(+28 files in other folders)
