[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "insel"
version = "0.0.6"
authors = [
    { name = "Eric Duminil", email = "inselpy@ericduminil.com" },
]
description = "A python wrapper for INSEL (insel.eu)"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/EricDuminil/inselpy"
"Bug Tracker" = "https://github.com/EricDuminil/inselpy"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.setuptools.package-data]
"insel.tests.data" = ["**"]
"insel.tests.templates" = ["**"]
